--- a/src/components/Products/Productos.sass
+++ b/src/components/Products/Productos.sass
@@ -1,5 +1,8 @@
 .container
     .row
+        .eventos
+            margin-top: 20px
+            justify-content: space-between
         .titulos
             padding: 20px 0px
             justify-content: space-between
@@ -22,17 +25,19 @@
                             font-size: 30px
                             cursor: pointer
 
-                        form
-                            padding: 20px
-                            height: 200px
-                            flex-wrap: wrap
-                            justify-content: center
-                            align-items: center
-                            .form-group
+                        form                           
+                            section
+                                padding: 20px
+                                height: auto
+                                flex-wrap: wrap
+                                justify-content: center
+                                align-items: center
+                                .form-group
+                                    width: 300px
+                                    margin: 15px 10px
+                            .button-change
                                 width: 300px
-                                margin: 15px 10px
-                                &:last-child
-                                    width: 100%
-                                    text-align: center
-                            button
-                                width: 100px
+                                margin: 15px auto
+                                text-align: center
+                                button
+                                    width: 100px
