--- a/src/components/Products/Productos.sass
+++ b/src/components/Products/Productos.sass
@@ -14,7 +14,7 @@
                         position: absolute
                         top: 10%
                         left: 0                        
-                        height: 500px
+                        height: 100vh
                         z-index: 3
                         background: #fff
                         overflow: auto
