--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,14 @@
   color: white !important;
   background-color: #17a2b8 !important;
 }
+
+.navbar {
+  background-color: #293542 !important;
+}
+
+.nav-item .nav-link {
+  color: white !important;
+}
+.navbar-brand {
+  color: white !important;
+}
